cargo-features = ["edition2021"]
[package]
name = "comptoir"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "comptoir"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []

[dependencies]
anchor-lang = {version = "0.23.0", features = ["init-if-needed"]}
anchor-spl = "0.23.0"
spl-token = { version = "3.2",  features = ["no-entrypoint"] }
metaplex-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex", rev = "8a69c0d01708b9bbd9cf34fd11bd57669773083d", features = [
    "no-entrypoint",
] }